frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sakpaas-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sakpaas/frontend:release-1.1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
