frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: -ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sakpaas-ip
    networking.gke.io/managed-certificates: sakpaas-certificate
spec:
  backend:
    serviceName: frontend-service
    servicePort: 8080
